initila commit again

--- a/index.html
+++ b/index.html
@@ -45,25 +45,19 @@
     <!-- Topbar Start -->
     <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row align-items-center top-bar">
-            <div class="col-lg-3 col-md-12 text-center text-lg-start">
+            <div class="col-lg-4 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
                     <h1 class="text-primary m-0">Alelabs.tech</h1>
                 </a>
             </div>
-            <div class="col-lg-9 col-md-12 text-end">
+            <div class="col-lg-8 col-md-12 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="fa fa-map-marker-alt text-primary me-2"></i>
                     <p class="m-0">Gisozi, Gasabo, RWANDA</p>
                 </div>
-                <div class="h-100 d-inline-flex align-items-center me-4">
-                    <i class="far fa-envelope-open text-primary me-2"></i>
-                    <p class="m-0">alelabsservices@egmail.com</p>
-                </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <!-- <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a> -->
-                    <a target="_blank" class="btn btn-sm-square bg-white text-primary me-1" href="https://x.com/alelabstech"><i class="fab fa-twitter"></i></a>
-                    <!-- <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
-                    <a target="blank" class="btn btn-sm-square bg-white text-primary me-0" href="https://www.instagram.com/alelabs.tech/"><i class="fab fa-instagram"></i></a>
+                    <i class="fa fa-phone-alt text-primary me-2"></i>
+                    <p class="m-0">+250 788 612171</p>
                 </div>
             </div>
         </div>
@@ -82,17 +76,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
-                                        <a href="index.html" class="nav-item nav-link active">Vision</a>                    <a href="about.html" class="nav-item nav-link">Our Mission</a>                    <a href="service.html" class="nav-item nav-link">Breakthrough Solutions</a>                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>                    <a href="team.html" class="nav-item nav-link">Connect With Experts</a>                    <a href="testimonial.html" class="nav-item nav-link">Success Stories</a>                    <a href="booking.html" class="nav-item nav-link">Schedule Now</a>                    <a href="contact.html" class="nav-item nav-link">Reach Out</a>
-                </div>
-                    </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="service.html" class="nav-item nav-link">Our Services</a>
+                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white" style="width: 45px; height: 45px;">
                         <i class="fa fa-phone-alt text-primary"></i>
                     </div>
                     <div class="ms-3">
-                        <p class="mb-1 text-white">Emergency 24/7</p>
+                        <p class="mb-1 text-white">Call Us Now</p>
                         <h5 class="m-0 text-secondary">+250 788 612171</h5>
                     </div>
                 </div>
@@ -106,48 +100,45 @@
     <div class="container-fluid p-0 mb-5">
         <div class="owl-carousel header-carousel position-relative">
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/cctvbg.jpg" alt="">
+                <img class="img-fluid" src="img/cctvbg.jpg" alt="CCTV Installation">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .4);">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Information technology solutions</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">CCTV security camera installations</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2">In alelabs, we put safety and service ahead of everything, we provide and install security cameras in homes, Businesses and instuitions with maintenance addition</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Professional CCTV Installation</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Expert security camera installation for homes and businesses. Complete setup with maintenance included.</p>
+                                <a href="service.html#cctv" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Learn More</a>
+                                <a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/wificov (1).jpg" alt="">
+                <img class="img-fluid" src="img/wificov (1).jpg" alt="Network Solutions">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .4);">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Networking at Homes and Business</h>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Internet Extensions to wider coverage and maintenance. </h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2"> Wifi installations, and the extension of internet for the wider coverage and maintenance of internet connectivity.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Network Solutions</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Professional WiFi installation and network setup for optimal coverage in homes and businesses.</p>
+                                <a href="service.html#networking" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Learn More</a>
+                                <a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-                        <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/labres.jpg" alt="">
+            <div class="owl-carousel-item position-relative">
+                <img class="img-fluid" src="img/labres.jpg" alt="Computer Lab Setup">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .4);">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Computer lab setup and mentainance</h>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Installations of servers and computers. </h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2"> We install and configure complete computer labs, including network, power, devices, and software—ready for immediate use..</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Computer Lab Setup</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Complete computer lab installation and maintenance. From network setup to device configuration.</p>
+                                <a href="service.html#lab" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Learn More</a>
+                                <a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
                             </div>
                         </div>
                     </div>
@@ -161,32 +152,39 @@
     <!-- Service Start -->
     <div class="container-xxl py-5">
         <div class="container">
+            <div class="text-center mx-auto mb-5 wow slideInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="text-primary mb-3">Our Services</h1>
+                <p class="mb-4">Professional IT solutions for homes and businesses in Kigali</p>
+            </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 service-item-top wow fadeInUp" data-wow-delay="0.1s">
                     <div class="overflow-hidden">
-                        <img class="img-fluid w-100 h-100" src="img/camera-1639219 (1).jpg" alt="">
+                        <img class="img-fluid w-100 h-100" src="img/camera-1639219 (1).jpg" alt="CCTV Installation">
                     </div>
-                    <div class="d-flex align-items-center justify-content-between bg-light p-4">
-                        <h5 class="text-truncate me-3 mb-0">CCTV/Security camera installations. </h5>
-                        <a class="btn btn-square btn-outline-primary border-2 border-white flex-shrink-0" href=""><i class="fa fa-arrow-right"></i></a>
+                    <div class="d-flex flex-column bg-light p-4">
+                        <h5 class="mb-3">CCTV Installation</h5>
+                        <p class="mb-3">Professional security camera installation with maintenance included. Perfect for homes and businesses.</p>
+                        <a href="service.html#cctv" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 service-item-top wow fadeInUp" data-wow-delay="0.3s">
                     <div class="overflow-hidden">
-                        <img class="img-fluid w-100 h-100" src="img/wifirouter.jpg" alt="">
+                        <img class="img-fluid w-100 h-100" src="img/wifirouter.jpg" alt="Network Solutions">
                     </div>
-                    <div class="d-flex align-items-center justify-content-between bg-light p-4">
-                        <h5 class="text-truncate me-3 mb-0">Networking Solutions. </h5>
-                        <a class="btn btn-square btn-outline-primary border-2 border-white flex-shrink-0" href=""><i class="fa fa-arrow-right"></i></a>
+                    <div class="d-flex flex-column bg-light p-4">
+                        <h5 class="mb-3">Network Solutions</h5>
+                        <p class="mb-3">Expert WiFi installation and network setup for optimal coverage and performance.</p>
+                        <a href="service.html#networking" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 service-item-top wow fadeInUp" data-wow-delay="0.5s">
                     <div class="overflow-hidden">
-                        <img class="img-fluid w-100 h-100" src="img/lab2 (1).jpg" alt="">
+                        <img class="img-fluid w-100 h-100" src="img/lab2 (1).jpg" alt="Computer Lab Setup">
                     </div>
-                    <div class="d-flex align-items-center justify-content-between bg-light p-4">
-                        <h5 class="text-truncate me-3 mb-0">Computer labs setup and mentainance</h5>
-                        <a class="btn btn-square btn-outline-primary border-2 border-white flex-shrink-0" href=""><i class="fa fa-arrow-right"></i></a>
+                    <div class="d-flex flex-column bg-light p-4">
+                        <h5 class="mb-3">Computer Lab Setup</h5>
+                        <p class="mb-3">Complete computer lab installation including network, devices, and software configuration.</p>
+                        <a href="service.html#lab" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -447,7 +445,7 @@
                         &copy; <a class="border-bottom" href="#">Alelabs | Networking solutions anywhere & anytime. </a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                        <!--/*** This template is free as long as you keep the footer author's credit link/attribution link/backlink. If you'd like to use the template without the footer author's credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="#">Alelabs.tech team</a>
                     </div>
                 </div>
