--- a/service.html
+++ b/service.html
@@ -45,25 +45,19 @@
     <!-- Topbar Start -->
     <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row align-items-center top-bar">
-            <div class="col-lg-3 col-md-12 text-center text-lg-start">
+            <div class="col-lg-4 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
                     <h1 class="text-primary m-0">Alelabs.tech</h1>
                 </a>
             </div>
-            <div class="col-lg-9 col-md-12 text-end">
+            <div class="col-lg-8 col-md-12 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="fa fa-map-marker-alt text-primary me-2"></i>
                     <p class="m-0">Gisozi, Gasabo, RWANDA</p>
                 </div>
-                <div class="h-100 d-inline-flex align-items-center me-4">
-                    <i class="far fa-envelope-open text-primary me-2"></i>
-                    <p class="m-0">alelabsservices@egmail.com</p>
-                </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <!-- <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a> -->
-                    <a target="_blank" class="btn btn-sm-square bg-white text-primary me-1" href="https://x.com/alelabstech"><i class="fab fa-twitter"></i></a>
-                    <!-- <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
-                    <a target="blank" class="btn btn-sm-square bg-white text-primary me-0" href="https://www.instagram.com/alelabs.tech/"><i class="fab fa-instagram"></i></a>
+                    <i class="fa fa-phone-alt text-primary me-2"></i>
+                    <p class="m-0">+250 788 612171</p>
                 </div>
             </div>
         </div>
@@ -82,17 +76,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
-                                        <a href="index.html" class="nav-item nav-link">Vision</a>                    <a href="about.html" class="nav-item nav-link">Our Mission</a>                    <a href="service.html" class="nav-item nav-link active">Breakthrough Solutions</a>                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>                    <a href="team.html" class="nav-item nav-link">Connect With Experts</a>                    <a href="testimonial.html" class="nav-item nav-link">Success Stories</a>                    <a href="booking.html" class="nav-item nav-link">Schedule Now</a>                    <a href="contact.html" class="nav-item nav-link">Reach Out</a>
-                </div>
-                    </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
+                    <a href="service.html" class="nav-item nav-link active">Our Services</a>
+                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white" style="width: 45px; height: 45px;">
                         <i class="fa fa-phone-alt text-primary"></i>
                     </div>
                     <div class="ms-3">
-                        <p class="mb-1 text-white">Emergency 24/7</p>
+                        <p class="mb-1 text-white">Call Us Now</p>
                         <h5 class="m-0 text-secondary">+250 788 612171</h5>
                     </div>
                 </div>
@@ -106,52 +100,64 @@
 
 
  <!-- Service Start -->
-    <div class="container-fluid py-5 px-4 px-lg-0">
-        <div class="row g-0">
-            <div class="col-lg-3 d-none d-lg-flex">
-                <div class="d-flex align-items-center justify-content-center bg-primary w-100 h-100">
-                    <h1 class="display-3 text-white m-0" style="transform: rotate(-90deg);">8 Projects Completed</h1>
-                </div>
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow slideInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="text-primary mb-3">Our Services</h1>
+                <p class="mb-4">Professional IT solutions tailored for your needs</p>
             </div>
-            <div class="col-md-12 col-lg-9">
-                <div class="ms-lg-5 ps-lg-5">
-                    <div class="text-center text-lg-start wow fadeInUp" data-wow-delay="0.1s">
-                        <h6 class="text-secondary text-uppercase">Our Services</h6>
-                        <h1 class="mb-5">Explore Our Services</h1>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" id="cctv">
+                    <div class="service-item bg-light rounded">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid w-100" src="img/camera-1639219 (1).jpg" alt="CCTV Installation">
+                        </div>
+                        <div class="p-4">
+                            <h4 class="mb-3">CCTV Installation</h4>
+                            <p>Professional security camera installation for homes and businesses:</p>
+                            <ul class="list-unstyled">
+                                <li><i class="fa fa-check text-success me-2"></i>Complete system setup</li>
+                                <li><i class="fa fa-check text-success me-2"></i>24/7 monitoring support</li>
+                                <li><i class="fa fa-check text-success me-2"></i>Regular maintenance</li>
+                                <li><i class="fa fa-check text-success me-2"></i>Remote access setup</li>
+                            </ul>
+                            <a href="contact.html" class="btn btn-primary">Get Quote</a>
+                        </div>
                     </div>
-                    <div class="owl-carousel service-carousel position-relative wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="bg-light p-4">
-                            <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
-                                <i class="fa fa-water fa-2x text-primary"></i>
-                            </div>
-                            <h4 class="mb-3">CCTV installation</h4>
-                            <p>This service is available for home, businesses in Kigali and outside. </p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
-                            <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s" id="networking">
+                    <div class="service-item bg-light rounded">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid w-100" src="img/wifirouter.jpg" alt="Network Solutions">
                         </div>
-                        <div class="bg-light p-4">
-                            <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
-                                <i class="fa fa-toilet fa-2x text-primary"></i>
-                            </div>
-                            <h4 class="mb-3">Internet connectivity</h4>
-                            <p>Homes or business or instutions, We extend your internet to the fullest.</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
-                            <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
+                        <div class="p-4">
+                            <h4 class="mb-3">Network Solutions</h4>
+                            <p>Expert WiFi and network installation services:</p>
+                            <ul class="list-unstyled">
+                                <li><i class="fa fa-check text-success me-2"></i>WiFi coverage optimization</li>
+                                <li><i class="fa fa-check text-success me-2"></i>Network security setup</li>
+                                <li><i class="fa fa-check text-success me-2"></i>Business network solutions</li>
+                                <li><i class="fa fa-check text-success me-2"></i>Ongoing support</li>
+                            </ul>
+                            <a href="contact.html" class="btn btn-primary">Get Quote</a>
                         </div>
-                        <div class="bg-light p-4">
-                            <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
-                                <i class="fa fa-shower fa-2x text-primary"></i>
-                            </div>
-                            <h4 class="mb-3">New computer lab rooms</h4>
-                            <p>We build computer lab setups and mantainance and consultation. </p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
-                            <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s" id="lab">
+                    <div class="service-item bg-light rounded">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid w-100" src="img/lab2 (1).jpg" alt="Computer Lab Setup">
+                        </div>
+                        <div class="p-4">
+                            <h4 class="mb-3">Computer Lab Setup</h4>
+                            <p>Complete computer lab installation and maintenance:</p>
+                            <ul class="list-unstyled">
+                                <li><i class="fa fa-check text-success me-2"></i>Full lab installation</li>
+                                <li><i class="fa fa-check text-success me-2"></i>Network configuration</li>
+                                <li><i class="fa fa-check text-success me-2"></i>Software setup</li>
+                                <li><i class="fa fa-check text-success me-2"></i>Regular maintenance</li>
+                            </ul>
+                            <a href="contact.html" class="btn btn-primary">Get Quote</a>
                         </div>
                     </div>
                 </div>
@@ -351,7 +357,7 @@
                         &copy; <a class="border-bottom" href="#">Alelabs | Networking solutions anywhere & anytime. </a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                        <!--/*** This template is free as long as you keep the footer author's credit link/attribution link/backlink. If you'd like to use the template without the footer author's credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="#">Alelabs.tech team</a>
                     </div>
                 </div>
