--- a/contact.html
+++ b/contact.html
@@ -45,25 +45,19 @@
     <!-- Topbar Start -->
     <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row align-items-center top-bar">
-            <div class="col-lg-3 col-md-12 text-center text-lg-start">
+            <div class="col-lg-4 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Alelabs</h1>
+                    <h1 class="text-primary m-0">Alelabs.tech</h1>
                 </a>
             </div>
-            <div class="col-lg-9 col-md-12 text-end">
+            <div class="col-lg-8 col-md-12 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="fa fa-map-marker-alt text-primary me-2"></i>
-                    <p class="m-0">Gisozi , Kigali, Rwanda</p>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center me-4">
-                    <i class="far fa-envelope-open text-primary me-2"></i>
-                    <p class="m-0">alelabsservices@gmail.com</p>
+                    <p class="m-0">Gisozi, Gasabo, RWANDA</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <i class="fa fa-phone-alt text-primary me-2"></i>
+                    <p class="m-0">+250 788 612171</p>
                 </div>
             </div>
         </div>
@@ -75,23 +69,25 @@
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
             <a href="" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
-                <h1 class="text-primary m-0">Alelabs</h1>
+                <h1 class="text-primary m-0">Alelabs Kigali</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
-                                        <a href="index.html" class="nav-item nav-link">Vision</a>                    <a href="about.html" class="nav-item nav-link">Our Mission</a>                    <a href="service.html" class="nav-item nav-link">Breakthrough Solutions</a>                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>                    <a href="team.html" class="nav-item nav-link">Connect With Experts</a>                    <a href="testimonial.html" class="nav-item nav-link">Success Stories</a>                    <a href="booking.html" class="nav-item nav-link">Schedule Now</a>                    <a href="contact.html" class="nav-item nav-link active">Reach Out</a>
-                    </div>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
+                    <a href="service.html" class="nav-item nav-link">Our Services</a>
+                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>
+                    <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white" style="width: 45px; height: 45px;">
                         <i class="fa fa-phone-alt text-primary"></i>
                     </div>
                     <div class="ms-3">
-                        <p class="mb-1 text-white">Emergency 24/7</p>
-                        <h5 class="m-0 text-secondary">+250 788 612 171</h5>
+                        <p class="mb-1 text-white">Call Us Now</p>
+                        <h5 class="m-0 text-secondary">+250 788 612171</h5>
                     </div>
                 </div>
             </div>
@@ -119,18 +115,82 @@
     <!-- Contact Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="row g-4">
-                <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase">Get In Touch</h6>
-                    <h1 class="mb-4">Reach Out to us for any query</h1>
-                    <p class="mb-4">Use this form anytimeyou want to talk to us, You can also tect us or call the telephone number given in the footer. <a target="_blank" href="/docs/testpg.pdf">Download Now</a>.</p>
-                    <iframe class="position-relative w-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15950.3330832606!2d30.052385460160032!3d-1.917895419034522!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca40763be708b%3A0x10885382109cecfc!2sGisozi%2C%20Kigali!5e0!3m2!1sen!2srw!4v1746825158749!5m2!1sen!2srw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
-                        <frameborder="0" style="height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="text-primary mb-3">Contact Us</h1>
+                <p class="mb-4">Get in touch with us for any inquiries or to schedule a service</p>
+            </div>
+            <div class="row g-5">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="d-flex flex-column justify-content-between h-100">
+                        <div class="bg-light rounded p-4 p-md-5">
+                            <h3 class="mb-4">Contact Information</h3>
+                            <div class="d-flex mb-4">
+                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary rounded-circle" style="width: 50px; height: 50px;">
+                                    <i class="fa fa-map-marker-alt text-white"></i>
+                                </div>
+                                <div class="ms-3">
+                                    <h5 class="text-primary">Our Location</h5>
+                                    <p class="mb-0">Gisozi, Gasabo, Kigali, RWANDA</p>
+                                </div>
+                            </div>
+                            <div class="d-flex mb-4">
+                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary rounded-circle" style="width: 50px; height: 50px;">
+                                    <i class="fa fa-phone-alt text-white"></i>
+                                </div>
+                                <div class="ms-3">
+                                    <h5 class="text-primary">Call Us</h5>
+                                    <p class="mb-0">+250 788 612171</p>
+                                </div>
+                            </div>
+                            <div class="d-flex mb-4">
+                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary rounded-circle" style="width: 50px; height: 50px;">
+                                    <i class="fa fa-envelope-open text-white"></i>
+                                </div>
+                                <div class="ms-3">
+                                    <h5 class="text-primary">Email Us</h5>
+                                    <p class="mb-0">alelabsservices@gmail.com</p>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary rounded-circle" style="width: 50px; height: 50px;">
+                                    <i class="fa fa-clock text-white"></i>
+                                </div>
+                                <div class="ms-3">
+                                    <h5 class="text-primary">Working Hours</h5>
+                                    <p class="mb-0">Monday - Friday: 8:00 AM - 6:00 PM</p>
+                                    <p class="mb-0">Saturday: 9:00 AM - 4:00 PM</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                                        <div class="bg-light p-5 h-100 d-flex align-items-center">                        <form id="contact-form">                            <div class="row g-3">                                <div class="col-md-6">                                    <div class="form-floating">                                        <input type="text" class="form-control" id="name" placeholder="Your Name" required>                                        <label for="name">Your Name</label>                                    </div>                                </div>                                <div class="col-md-6">                                    <div class="form-floating">                                        <input type="email" class="form-control" id="email" placeholder="Your Email" required>                                        <label for="email">Your Email</label>                                    </div>                                </div>                                <div class="col-12">                                    <div class="form-floating">                                        <input type="text" class="form-control" id="subject" placeholder="Subject" required>                                        <label for="subject">Subject</label>                                    </div>                                </div>                                <div class="col-12">                                    <div class="form-floating">                                        <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 150px" required></textarea>                                        <label for="message">Message</label>                                    </div>                                </div>                                <div class="col-12">                                    <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>                                </div>                            </div>                        </form>
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="bg-light rounded p-4 p-md-5">
+                        <h3 class="mb-4">Send Us a Message</h3>
+                        <form id="contact-form">
+                            <div class="row g-3">
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
+                                </div>
+                                <div class="col-12">
+                                    <select class="form-select border-0" style="height: 55px;" required>
+                                        <option value="">Select A Service</option>
+                                        <option value="CCTV">CCTV Installation</option>
+                                        <option value="Network">Network Solutions</option>
+                                        <option value="Lab">Computer Lab Setup</option>
+                                    </select>
+                                </div>
+                                <div class="col-12">
+                                    <textarea class="form-control border-0" rows="4" placeholder="Tell us about your needs" required></textarea>
+                                </div>
+                                <div class="col-12">
+                                    <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -183,7 +243,7 @@
                         &copy; <a class="border-bottom" href="#">alelabs Kigali, Rwanda</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                        <!--/*** This template is free as long as you keep the footer author's credit link/attribution link/backlink. If you'd like to use the template without the footer author's credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed at <a class="border-bottom" href="https://htmlcodex.com">Alelabs</a>
                     </div>
                 </div>
