--- a/index.html
+++ b/index.html
@@ -430,11 +430,7 @@
                     <a class="btn btn-link" href="">CCTV cameras</a>
                     <a class="btn btn-link" href="">Internet connectivity</a>
                     <a class="btn btn-link" href="">Computer labs</a>
-                    <a class="btn btn-link" href="">Computer labs mentainance</a>
-                    <!-- <a class="btn btn-link" href="">Broken Pipe</a> -->
-                </div>
-                <div class="col-lg-3 col-md-6">
-                                        <h4 class="text-light mb-4">Newsletter</h4>                    <p>Stay updated with our new letter.</p>                    <form id="newsletter-form">                        <div class="position-relative mx-auto" style="max-width: 400px;">                            <input id="newsletter-email" class="form-control border-0 w-100 py-3 ps-4 pe-5" type="email" placeholder="Your email" required>                            <button id="newsletter-submit" type="submit" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>                        </div>                    </form>
+                    <a class="btn btn-link" href="">Computer labs maintenance</a>
                 </div>
             </div>
         </div>
