--- a/service.html
+++ b/service.html
@@ -200,31 +200,31 @@
                 <div class="col-lg-8">
                     <div class="bg-light text-center p-5">
                         <h1 class="mb-4">Book For A Service</h1>
-                        <form>
+                        <form id="service-booking-form">
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;">
+                                    <input type="text" name="name" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;">
+                                    <input type="email" name="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
-                                        <option selected>Select A Service</option>
-                                        <option value="1">CCTV installations</option>
-                                        <option value="2">Internet connectivity</option>
-                                        <option value="3">Computer lab</option>
+                                    <select name="service" class="form-select border-0" style="height: 55px;" required>
+                                        <option value="">Select A Service</option>
+                                        <option value="CCTV Installation">CCTV Installation</option>
+                                        <option value="Network Solutions">Network Solutions</option>
+                                        <option value="Computer Lab Setup">Computer Lab Setup</option>
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     <div class="date" id="date1" data-target-input="nearest">
-                                        <input type="text"
+                                        <input type="text" name="date"
                                             class="form-control border-0 datetimepicker-input"
-                                            placeholder="Service Date" data-target="#date1" data-toggle="datetimepicker" style="height: 55px;">
+                                            placeholder="Service Date" data-target="#date1" data-toggle="datetimepicker" style="height: 55px;" required>
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="form-control border-0" placeholder="Special Request"></textarea>
+                                    <textarea name="special_request" class="form-control border-0" placeholder="Special Request"></textarea>
                                 </div>
                                 <div class="col-12">
                                     <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
@@ -342,11 +342,7 @@
                     <a class="btn btn-link" href="">CCTV cameras</a>
                     <a class="btn btn-link" href="">Internet connectivity</a>
                     <a class="btn btn-link" href="">Computer labs</a>
-                    <a class="btn btn-link" href="">Computer labs mentainance</a>
-                    <!-- <a class="btn btn-link" href="">Broken Pipe</a> -->
-                </div>
-                <div class="col-lg-3 col-md-6">
-                                        <h4 class="text-light mb-4">Newsletter</h4>                    <p>Stay updated with our new letter.</p>                    <form id="footer-newsletter-form">                        <div class="position-relative mx-auto" style="max-width: 400px;">                            <input id="footer-newsletter-email" class="form-control border-0 w-100 py-3 ps-4 pe-5" type="email" placeholder="Your email" required>                            <button id="footer-newsletter-submit" type="submit" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>                        </div>                    </form>
+                    <a class="btn btn-link" href="">Computer labs maintenance</a>
                 </div>
             </div>
         </div>
