--- a/contact.html
+++ b/contact.html
@@ -169,22 +169,25 @@
                         <h3 class="mb-4">Send Us a Message</h3>
                         <form id="contact-form">
                             <div class="row g-3">
-                                <div class="col-md-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
+                                <div class="col-12 col-sm-6">
+                                    <input type="text" name="name" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
                                 </div>
-                                <div class="col-md-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
+                                <div class="col-12 col-sm-6">
+                                    <input type="email" name="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
                                 </div>
-                                <div class="col-12">
-                                    <select class="form-select border-0" style="height: 55px;" required>
+                                <div class="col-12 col-sm-6">
+                                    <select name="service" class="form-select border-0" style="height: 55px;" required>
                                         <option value="">Select A Service</option>
-                                        <option value="CCTV">CCTV Installation</option>
-                                        <option value="Network">Network Solutions</option>
-                                        <option value="Lab">Computer Lab Setup</option>
+                                        <option value="CCTV Installation">CCTV Installation</option>
+                                        <option value="Network Solutions">Network Solutions</option>
+                                        <option value="Computer Lab Setup">Computer Lab Setup</option>
                                     </select>
                                 </div>
+                                <div class="col-12 col-sm-6">
+                                    <input type="date" name="date" class="form-control border-0" style="height: 55px;" required>
+                                </div>
                                 <div class="col-12">
-                                    <textarea class="form-control border-0" rows="4" placeholder="Tell us about your needs" required></textarea>
+                                    <textarea name="message" class="form-control border-0" rows="4" placeholder="Tell us about your needs" required></textarea>
                                 </div>
                                 <div class="col-12">
                                     <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
@@ -224,15 +227,12 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">CCTV systemsn installation </a>
-                    <a class="btn btn-link" href="">Computer lab amaintenance</a>
+                    <a class="btn btn-link" href="">CCTV systems installation</a>
+                    <a class="btn btn-link" href="">Computer lab maintenance</a>
                     <a class="btn btn-link" href="">Networking solutions</a>
                     <a class="btn btn-link" href="">Wordpress website</a>
                     <a class="btn btn-link" href="">Overall IT support</a>
                     <a class="btn btn-link" href="">Maintenance</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                                        <h4 class="text-light mb-4">Newsletter</h4>                    <p>Fill this form to stay updated and get discounts.</p>                    <form id="footer-newsletter-form">                        <div class="position-relative mx-auto" style="max-width: 400px;">                            <input id="footer-newsletter-email" class="form-control border-0 w-100 py-3 ps-4 pe-5" type="email" placeholder="Your email" required>                            <button id="footer-newsletter-submit" type="submit" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>                        </div>                    </form>
                 </div>
             </div>
         </div>
