--- a/pricing.html
+++ b/pricing.html
@@ -251,21 +251,21 @@
                         <form id="pricing-contact-form">
                             <div class="row g-3">
                                 <div class="col-md-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
+                                    <input type="text" name="name" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
+                                    <input type="email" name="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
                                 </div>
                                 <div class="col-12">
-                                    <select class="form-select border-0" style="height: 55px;" required>
+                                    <select name="service" class="form-select border-0" style="height: 55px;" required>
                                         <option value="">Select A Service</option>
-                                        <option value="CCTV">CCTV Installation</option>
-                                        <option value="Network">Network Solutions</option>
-                                        <option value="Lab">Computer Lab Setup</option>
+                                        <option value="CCTV Installation">CCTV Installation</option>
+                                        <option value="Network Solutions">Network Solutions</option>
+                                        <option value="Computer Lab Setup">Computer Lab Setup</option>
                                     </select>
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="form-control border-0" rows="4" placeholder="Tell us about your requirements" required></textarea>
+                                    <textarea name="requirements" class="form-control border-0" rows="4" placeholder="Tell us about your requirements" required></textarea>
                                 </div>
                                 <div class="col-12">
                                     <button class="btn btn-primary w-100 py-3" type="submit">Request Quote</button>
@@ -306,20 +306,11 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">CCTV cameras</a>
-                    <a class="btn btn-link" href="">Internet connectivity</a>
-                    <a class="btn btn-link" href="">Computer labs</a>
-                    <a class="btn btn-link" href="">Computer labs mentainance</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Stay updated with our new letter.</p>
-                    <form id="footer-newsletter-form">
-                        <div class="position-relative mx-auto" style="max-width: 400px;">
-                            <input id="footer-newsletter-email" class="form-control border-0 w-100 py-3 ps-4 pe-5" type="email" placeholder="Your email" required>
-                            <button id="footer-newsletter-submit" type="submit" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                        </div>
-                    </form>
+                    <a class="btn btn-link" href="">CCTV Installation</a>
+                    <a class="btn btn-link" href="">Network Solutions</a>
+                    <a class="btn btn-link" href="">Computer Lab Setup</a>
+                    <a class="btn btn-link" href="">IT Support</a>
+                    <a class="btn btn-link" href="">Maintenance</a>
                 </div>
             </div>
         </div>
