--- a/pricing.html
+++ b/pricing.html
@@ -146,7 +146,7 @@
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <div class="d-flex justify-content-between mb-3">
-                                <span>DVR System</span>
+                                <span>NVR System</span>
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <div class="d-flex justify-content-between mb-3">
@@ -154,7 +154,7 @@
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <div class="d-flex justify-content-between mb-2">
-                                <span>1 Month Support</span>
+                                <span>12 Month Support</span>
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <a href="contact.html" class="btn btn-primary py-3 px-5 mt-4">Get Started</a>
@@ -186,11 +186,11 @@
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <div class="d-flex justify-content-between mb-3">
-                                <span>Basic Security</span>
+                                <span>Basic Security, Equipements Included</span>
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <div class="d-flex justify-content-between mb-2">
-                                <span>1 Month Support</span>
+                                <span>6 Month Support</span>
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <a href="contact.html" class="btn btn-primary py-3 px-5 mt-4">Get Started</a>
